# introduction_pytest

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
basics/src/: inverse.py
basics/tests/: test_first.py  test_inverse.py
exercices/src/: fonctions_difficiles.py  fonctions_simples.py
exercices/tests/: test_exercices.py  test_fonctions_difficiles.py
